# Expert-Matching-Pipeline

./: Makefile  Pipfile  README.md  api.py  pyproject.toml  run_matcher.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: matcher.py
notebooks/: kaggle.ipynb  minilm.ipynb
tests/: test_data.py
