[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iap"
version = "0.0.1"
description = "Mentor - Mentee matching ML Pipeline"
authors = [
  { name = "Prantik M" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["iap"]
include = ["pyproject.toml", "iap/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["iap"]
force-sort-within-sections = true

